--- a/src/Components/Resume/resume.css
+++ b/src/Components/Resume/resume.css
@@ -38,6 +38,7 @@
     background-color: rgba(196, 196, 196, 0.2);
     padding: .25rem 0 .25rem .5rem;
     border-radius: 0.125rem;
+    margin-bottom: 1rem;
 }
 
 .input-lower{
