--- a/src/tailwind.output.css
+++ b/src/tailwind.output.css
@@ -584,6 +584,18 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-right: 0.25rem;
 }
 
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
+
+.mt-10 {
+  margin-top: 2.5rem;
+}
+
+.mt-\[4\.5rem\] {
+  margin-top: 4.5rem;
+}
+
 .ml-1 {
   margin-left: 0.25rem;
 }
@@ -594,10 +606,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .mt-0 {
   margin-top: 0px;
-}
-
-.mb-5 {
-  margin-bottom: 1.25rem;
 }
 
 .ml-\[5\%\] {
@@ -718,16 +726,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 90%;
 }
 
+.w-48 {
+  width: 12rem;
+}
+
 .w-\[14\.3\%\] {
   width: 14.3%;
 }
 
 .w-2 {
   width: 0.5rem;
-}
-
-.w-48 {
-  width: 12rem;
 }
 
 .w-1\/2 {
