--- a/src/tailwind.output.css
+++ b/src/tailwind.output.css
@@ -526,6 +526,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   top: 1rem;
 }
 
+.bottom-1 {
+  bottom: 0.25rem;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -726,6 +730,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 90%;
 }
 
+.w-64 {
+  width: 16rem;
+}
+
 .w-\[14\.3\%\] {
   width: 14.3%;
 }
@@ -844,12 +852,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-bottom-right-radius: 0.5rem;
 }
 
-.border-\[1px\] {
-  border-width: 1px;
-}
-
 .border-2 {
   border-width: 2px;
+}
+
+.border-\[1px\] {
+  border-width: 1px;
 }
 
 .border-r-2 {
@@ -872,6 +880,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-style: dashed;
 }
 
+.border-orange {
+  --tw-border-opacity: 1;
+  border-color: rgb(253 112 94 / var(--tw-border-opacity));
+}
+
 .border-gray {
   --tw-border-opacity: 1;
   border-color: rgb(229 229 229 / var(--tw-border-opacity));
@@ -882,19 +895,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-color: rgb(135 78 210 / var(--tw-border-opacity));
 }
 
-.border-orange {
-  --tw-border-opacity: 1;
-  border-color: rgb(253 112 94 / var(--tw-border-opacity));
+.bg-gray {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 229 229 / var(--tw-bg-opacity));
 }
 
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-gray {
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 229 229 / var(--tw-bg-opacity));
 }
 
 .bg-purple {
@@ -1042,10 +1050,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .pt-2 {
   padding-top: 0.5rem;
-}
-
-.pb-1 {
-  padding-bottom: 0.25rem;
 }
 
 .pr-2 {
