--- a/src/tailwind.output.css
+++ b/src/tailwind.output.css
@@ -634,6 +634,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-top: 1.25rem;
 }
 
+.mt-6 {
+  margin-top: 1.5rem;
+}
+
 .block {
   display: block;
 }
@@ -1408,6 +1412,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .md\:row-start-1 {
     grid-row-start: 1;
+  }
+
+  .md\:float-left {
+    float: left;
   }
 
   .md\:flex {
