--- a/src/tailwind.output.css
+++ b/src/tailwind.output.css
@@ -768,6 +768,22 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 50%;
 }
 
+.w-1\/6 {
+  width: 16.666667%;
+}
+
+.w-1\/3 {
+  width: 33.333333%;
+}
+
+.w-2\/3 {
+  width: 66.666667%;
+}
+
+.w-5\/6 {
+  width: 83.333333%;
+}
+
 .w-48 {
   width: 12rem;
 }
@@ -776,8 +792,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 0.5rem;
 }
 
-.w-2\/3 {
-  width: 66.666667%;
+.w-\[762px\] {
+  width: 762px;
 }
 
 .min-w-\[200px\] {
@@ -1476,6 +1492,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .md\:justify-start {
     justify-content: flex-start;
+  }
+
+  .md\:justify-evenly {
+    justify-content: space-evenly;
   }
 
   .md\:gap-48 {
