--- a/src/Components/Resume/resume.css
+++ b/src/Components/Resume/resume.css
@@ -230,7 +230,7 @@
         width: 100%;
         padding: 0;
         margin: 0;
-        break-inside: page !important;
+        page-break-after: page !important;
     }
 
     #resume-page-1 {
