--- a/src/tailwind.output.css
+++ b/src/tailwind.output.css
@@ -740,6 +740,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 112%;
 }
 
+.h-48 {
+  height: 12rem;
+}
+
 .max-h-20 {
   max-height: 5rem;
 }
