--- a/src/tailwind.output.css
+++ b/src/tailwind.output.css
@@ -1524,6 +1524,10 @@ Ensure the default browser behavior of the `hidden` attribute.
     width: 4rem;
   }
 
+  .md\:min-w-0 {
+    min-width: 0px;
+  }
+
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -1598,11 +1602,5 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .xl\:w-1\/2 {
     width: 50%;
-  }
-
-  .xl\:min-w-fit {
-    min-width: -webkit-fit-content;
-    min-width: -moz-fit-content;
-    min-width: fit-content;
   }
 }
