--- a/src/tailwind.output.css
+++ b/src/tailwind.output.css
@@ -538,16 +538,20 @@ Ensure the default browser behavior of the `hidden` attribute.
   z-index: 30;
 }
 
+.col-span-2 {
+  grid-column: span 2 / span 2;
+}
+
+.col-span-6 {
+  grid-column: span 6 / span 6;
+}
+
 .col-span-3 {
   grid-column: span 3 / span 3;
 }
 
 .col-span-1 {
   grid-column: span 1 / span 1;
-}
-
-.col-span-2 {
-  grid-column: span 2 / span 2;
 }
 
 .float-right {
@@ -671,6 +675,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   display: inline-flex;
 }
 
+.table {
+  display: table;
+}
+
 .grid {
   display: grid;
 }
@@ -699,12 +707,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 100vh;
 }
 
-.h-1\/3 {
-  height: 33.333333%;
-}
-
 .h-full {
   height: 100%;
+}
+
+.h-1\/3 {
+  height: 33.333333%;
 }
 
 .h-20 {
@@ -849,6 +857,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   grid-auto-flow: column;
 }
 
+.grid-cols-12 {
+  grid-template-columns: repeat(12, minmax(0, 1fr));
+}
+
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
@@ -951,25 +963,34 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-width: 1px;
 }
 
+.border-x-\[1px\] {
+  border-left-width: 1px;
+  border-right-width: 1px;
+}
+
 .border-x-2 {
   border-left-width: 2px;
   border-right-width: 2px;
 }
 
-.border-r-2 {
-  border-right-width: 2px;
+.border-b-\[0px\] {
+  border-bottom-width: 0px;
+}
+
+.border-r-\[1px\] {
+  border-right-width: 1px;
 }
 
 .border-b-\[1px\] {
   border-bottom-width: 1px;
 }
 
-.border-l-2 {
-  border-left-width: 2px;
+.border-r-2 {
+  border-right-width: 2px;
 }
 
-.border-r-\[1px\] {
-  border-right-width: 1px;
+.border-l-2 {
+  border-left-width: 2px;
 }
 
 .border-t-\[1px\] {
@@ -986,10 +1007,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .border-l-\[1px\] {
   border-left-width: 1px;
-}
-
-.border-b-\[0px\] {
-  border-bottom-width: 0px;
 }
 
 .border-b-2 {
@@ -1038,6 +1055,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-skillsheetgray {
+  --tw-bg-opacity: 1;
+  background-color: rgb(242 242 242 / var(--tw-bg-opacity));
+}
+
 .bg-purple {
   --tw-bg-opacity: 1;
   background-color: rgb(135 78 210 / var(--tw-bg-opacity));
@@ -1067,12 +1089,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding: 1rem;
 }
 
-.p-3 {
-  padding: 0.75rem;
-}
-
 .p-1 {
   padding: 0.25rem;
+}
+
+.p-3 {
+  padding: 0.75rem;
 }
 
 .px-3 {
@@ -1129,6 +1151,18 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-left: 0.5rem;
 }
 
+.pb-3 {
+  padding-bottom: 0.75rem;
+}
+
+.pt-3 {
+  padding-top: 0.75rem;
+}
+
+.pt-10 {
+  padding-top: 2.5rem;
+}
+
 .pt-6 {
   padding-top: 1.5rem;
 }
@@ -1161,10 +1195,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-bottom: .125rem;
 }
 
-.pt-10 {
-  padding-top: 2.5rem;
-}
-
 .pr-14 {
   padding-right: 3.5rem;
 }
@@ -1175,10 +1205,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .pt-2 {
   padding-top: 0.5rem;
-}
-
-.pt-3 {
-  padding-top: 0.75rem;
 }
 
 .pb-5 {
@@ -1598,6 +1624,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .xl\:grid {
     display: grid;
+  }
+
+  .xl\:w-2\/3 {
+    width: 66.666667%;
   }
 
   .xl\:w-1\/2 {
